fixed sizes of sad icons on mobile

--- a/src/app/story/anger-disgust/anger-disgust.component.css
+++ b/src/app/story/anger-disgust/anger-disgust.component.css
@@ -4,13 +4,8 @@
   top: 75%;
   right: 80%;
 }
-.img-tall {
+.img-animation {
   height: 270px;
-  margin: auto;
-}
-.img-wide {
-  width: 460px;
-  margin: auto;
 }
 .content {
   height: 50vh;
